# sparkling_lakes

./: .gitignore  README.md  cross_check.ipynb  pyproject.toml  sense_check.ipynb
lesson-2-spark-essentials/exercises/: README.md
lesson-2-spark-essentials/exercises/concept1-data-wrangling-maps-lambda-functions/: rdd_song_lower_case.ipynb
lesson-2-spark-essentials/exercises/concept1-data-wrangling-maps-lambda-functions/solution/: solution.ipynb
lesson-2-spark-essentials/exercises/concept2-reading-and-writing-data-with-spark/: data_inputs_and_output.ipynb
lesson-2-spark-essentials/exercises/concept3-data-wrangling-with-spark/: data_wrangling.ipynb
lesson-2-spark-essentials/exercises/concept5-quiz-data-wrangling-with-spark-sql/: data-wrangling-with-spark-sql.ipynb
lesson-3-using-spark-in-aws/exercises/concept3-creating-a-job-using-glue-studio/: customer_trusted.py
lesson-4-ingesting-and-organizing-data-in-a-lakehouse/exercises/concept1-define-a-cusomter-landing-zone-table/: create_customer_landing.sql  create_customer_trusted.sql
lesson-4-ingesting-and-organizing-data-in-a-lakehouse/exercises/concept2-define-an-accelerometer-landing-zone-table/solution/: create_accelerometer_landing.sql
lesson-4-ingesting-and-organizing-data-in-a-lakehouse/exercises/concept4-spark-glue-joins/: accelerometer_trusted.py
project/results/: accelerometer_trusted.py  customer_landing.sql  customer_landing_to_trusted.py
project/results/for_rubics_mess/: accelerometer_landing_to_trusted.py  customer_landing_to_trusted.py
(+13 files in other folders)
