[tool.poetry]
name = "sparkling-lakes"
version = "0.1.0"
description = "some stuff like helper functions if needed"
authors = ["Caspar Heidbrink <37964284+DecisioNaut@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sparkling_lakes"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
